# Aegis

./: .gitignore  README.md  alembic.ini  docker-compose.yml  init.sql  local-start.md  main.py  migrate_policies.sql  requirements.txt  test-policy.json
aegis-cli/: .gitignore  README.md  pyproject.toml  requirements.txt
aegis-cli/src/: api_client.py  config.py  database.py  main.py  utils.py
aegis-cli/src/commands/: __init__.py  agent.py  policy.py  role.py  run.py  team.py  tool.py  user.py  workflow.py  workspace.py
aegis-cli/tests/: __init__.py  test_cli.py
aegis-service/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
aegis-service/src/: auth.py  config.py  database.py  dependencies.py  main.py  schemas.py
aegis-service/src/aegis/: __init__.py  core.py  registry.py  types.py
aegis-service/src/aegis/agents/autonomous/: __init__.py  escalation_manager.py  planner.py
aegis-service/src/aegis/agents/system/: file_agent.py  orchestrator_agent.py
aegis-service/src/aegis/cli/: cli.py
aegis-service/src/aegis/environment/: web_env.py
aegis-service/src/aegis/generator/: agent_packager.py  agent_sandbox.py
aegis-service/src/aegis/memory/: tool_memory.py
aegis-service/src/aegis/store/: agent_store.py  store_registry.py
aegis-service/src/aegis/tools/: web_tools.py
aegis-service/src/aegis/workflows/: workflow_engine.py
aegis-service/src/routers/: agent_files.py  agent_generator.py  agents.py  auth.py  configuration.py  files.py  mcp.py  policies.py  roles.py  runs.py  settings.py  teams.py  tools.py  users.py  workflows.py  workspaces.py
aegis-service/src/services/: __init__.py  custom_tools.py  file_service.py  logging_service.py  mcp_client.py  runner.py  tool_registry.py
aegis-service/tests/: __init__.py  conftest.py  test_agents.py
(+206 files in other folders)
